grammar/SQL_Upercase.bnf
// SQLite SQL grammar for MaiaCC / tREx
// Derived from the official SQLite syntax diagrams.
// Target: tREx recursive-descent parser using REx-compatible EBNF.
//
// Start rule: SqlScript
//
// Design notes:
// - No direct left recursion.
// - Expressions are factored by precedence.
// - SQL keywords are accepted only in uppercase.
// - SQLite keywords remain usable in syntactic name positions.
// - Whitespace and SQL comments are discarded through /* ws: definition */.
// - UPDATE/DELETE ORDER BY/LIMIT forms are included; their execution may depend
//   on SQLITE_ENABLE_UPDATE_DELETE_LIMIT in native SQLite builds.
// - Virtual-table module arguments are necessarily permissive because each
//   virtual-table module defines its own argument language.

SqlScript
  ::= ';'*
      (SqlStatement (';' ';'* SqlStatement)* ';'*)?
      EOF

SqlStatement
  ::= ExplainPrefix?
  ( BeginStmt
      | CommitStmt
      | CreateIndexStmt
      | CreateTableStmt
      | CreateTriggerStmt
      | CreateViewStmt
      | DeleteStmt
      | InsertStmt
      | PragmaStmt
      | ReleaseStmt
      | RollbackStmt
      | SavepointStmt
      | SelectStmt
      | UpdateStmt
      | VacuumStmt
      )

BeginStmt
  ::= 'BEGIN' ('DEFERRED' | 'IMMEDIATE' | 'EXCLUSIVE')? 'TRANSACTION'?

CommitStmt ::= ('COMMIT' | 'END') 'TRANSACTION'?

RollbackStmt
  ::= 'ROLLBACK' 'TRANSACTION'?
      ('TO' 'SAVEPOINT'? SavepointName)?

SavepointStmt ::= 'SAVEPOINT' SavepointName
ReleaseStmt   ::= 'RELEASE' 'SAVEPOINT'? SavepointName

VacuumStmt ::= 'VACUUM' SchemaName? ('INTO' Filename)?

PragmaStmt
  ::= 'PRAGMA' SchemaQualifier? PragmaName
      ( '=' PragmaValue
      | '(' PragmaValue ')'
      )?

PragmaValue
  ::= SignedNumber
  | Name
  | StringLiteral
  | 'ON'
  | 'OFF'
  | 'TRUE'
  | 'FALSE'
  | 'YES'
  | 'NO'

CreateIndexStmt
  ::= 'CREATE' 'UNIQUE'? 'INDEX' IfNotExists?
      SchemaQualifier? IndexName
      'ON' TableName
      '(' IndexedColumn (',' IndexedColumn)* ')'
      ('WHERE' Expr)?

CreateTableStmt
  ::= 'CREATE' ('TEMP' | 'TEMPORARY')? 'TABLE' IfNotExists?
      SchemaQualifier? TableName
      ( '(' ColumnDef (',' ColumnDef)* ')'
        TableOptions?
      | 'AS' SelectStmt
      )

ColumnDef ::= ColumnName TypeName? ColumnConstraint*

TypeName ::= Name+ ('(' SignedNumber (',' SignedNumber)? ')')?

ColumnConstraint
  ::= ('CONSTRAINT' ConstraintName)?
      ( 'PRIMARY' 'KEY' ('ASC' | 'DESC')? 'AUTOINCREMENT'?
      | 'NOT' 'NULL'
      | 'UNIQUE'
      | 'CHECK' '(' Expr ')'
      | 'DEFAULT' (SignedNumber | LiteralValue | '(' Expr ')')
      | 'COLLATE' CollationName
      )

TableOptions ::= TableOption (',' TableOption)*
TableOption  ::= 'WITHOUT' 'ROWID' | 'STRICT'

CreateViewStmt
  ::= 'CREATE' ('TEMP' | 'TEMPORARY')? 'VIEW' IfNotExists?
      SchemaQualifier? ViewName
      ('(' ColumnName (',' ColumnName)* ')')?
      'AS' SelectStmt

CreateTriggerStmt
  ::= 'CREATE' ('TEMP' | 'TEMPORARY')? 'TRIGGER' IfNotExists?
      SchemaQualifier? TriggerName
      ('BEFORE' | 'AFTER' | 'INSTEAD' 'OF')?
      ('DELETE'
      | 'INSERT'
      | 'UPDATE' ('OF' ColumnName (',' ColumnName)*)?
      )
      'ON' TableName
      ('FOR' 'EACH' 'ROW')?
      ('WHEN' Expr)?
      'BEGIN'
      TriggerStep (';' TriggerStep)* ';'?
      'END'

TriggerStep
  ::= UpdateStmt
  | InsertStmt
  | DeleteStmt
  | SelectStmt

InsertStmt
  ::= WithClause?
      ('INSERT' ConflictModifier? | 'REPLACE')
      'INTO' SchemaQualifier? TableName
      ('AS' TableAlias)?
      ('(' ColumnName (',' ColumnName)* ')')?
      ( DefaultValues
      | ValuesClause
      | SelectStmt
      )
      UpsertClause*
      ReturningClause?

ConflictModifier ::= 'OR' ConflictAction
DefaultValues    ::= 'DEFAULT' 'VALUES'

ValuesClause
  ::= 'VALUES' ParenthesizedExprList (',' ParenthesizedExprList)*

ParenthesizedExprList ::= '(' Expr (',' Expr)* ')'

UpsertClause
  ::= 'ON' 'CONFLICT'
      ('(' IndexedColumn (',' IndexedColumn)* ')' ('WHERE' Expr)?)?
      'DO'
      ( 'NOTHING'
      | 'UPDATE' 'SET' UpdateAssignment (',' UpdateAssignment)*
        ('WHERE' Expr)?
      )

UpdateStmt
  ::= WithClause?
      'UPDATE' ConflictModifier?
      QualifiedTableName
      'SET' UpdateAssignment (',' UpdateAssignment)*
      UpdateFromClause?
      ('WHERE' Expr)?
      ReturningClause?

UpdateAssignment
  ::= ColumnName '=' Expr
  | '(' ColumnName (',' ColumnName)* ')' '=' Expr

UpdateFromClause ::= 'FROM' TableOrSubquery (',' TableOrSubquery)*

DeleteStmt
  ::= WithClause?
      'DELETE' 'FROM' QualifiedTableName
      ('WHERE' Expr)?
      ReturningClause?

UpdateDeleteLimitClause
  ::= ('ORDER' 'BY' OrderingTerm (',' OrderingTerm)*)?
      'LIMIT' Expr
      ( ('OFFSET' Expr) | (',' Expr) )?

QualifiedTableName
  ::= SchemaQualifier? TableName
      ( 'INDEXED' 'BY' IndexName
      | 'NOT' 'INDEXED'
      )?

ReturningClause
  ::= 'RETURNING' ResultColumn (',' ResultColumn)*

SelectStmt
  ::= WithClause?
      SelectCore
      (CompoundOperator SelectCore)*
      ('ORDER' 'BY' OrderingTerm (',' OrderingTerm)*)?
      LimitClause?

WithClause
  ::= 'WITH' 'RECURSIVE'?
      CommonTableExpression (',' CommonTableExpression)*

CommonTableExpression
  ::= TableName
      ('(' ColumnName (',' ColumnName)* ')')?
      'AS'
      '(' SelectStmt ')'

SelectCore
  ::= 'SELECT' ('DISTINCT' | 'ALL')?
      ResultColumn (',' ResultColumn)*
      FromClause?
      ('WHERE' Expr)?
  | ValuesClause

FromClause
  ::= 'FROM' JoinClause

GroupByClause
  ::= 'GROUP' 'BY' Expr (',' Expr)*
      ('HAVING' Expr)?

CompoundOperator
  ::= 'UNION' 'ALL'?
  | 'INTERSECT'
  | 'EXCEPT'

LimitClause
  ::= 'LIMIT' Expr
      ( ('OFFSET' Expr) | (',' Expr) )?

ResultColumn
  ::= '*'
  | TableName '.' '*'
  | Expr ('AS'? ColumnAlias)?

TableOrSubquery
  ::= SchemaQualifier? TableName
      ('AS'? TableAlias)?
  | '(' SelectStmt ')' ('AS'? TableAlias)?
  | '(' JoinClause ')' ('AS'? TableAlias)?

JoinClause ::= TableOrSubquery (JoinOperator TableOrSubquery JoinConstraint?)*

JoinOperator
  ::= ','
  | 'LEFT' 'JOIN'
  | 'INNER' 'JOIN'
  | 'CROSS' 'JOIN'

JoinConstraint
  ::= 'ON' Expr
  | 'USING' '(' ColumnName (',' ColumnName)* ')'

OrderingTerm
  ::= Expr
      ('COLLATE' CollationName)?
      ('ASC' | 'DESC')?
      ('NULLS' ('FIRST' | 'LAST'))?

IndexedColumn
  ::= (ColumnName | Expr)
      ('COLLATE' CollationName)?
      ('ASC' | 'DESC')?

WindowDefn
  ::= '('
      ')'

OverClause
  ::= 'OVER' WindowDefn

// Expression grammar is factored by precedence for deterministic parser generation.

Expr ::= OrExpr

OrExpr ::= AndExpr ('OR' AndExpr)*

AndExpr ::= NotExpr ('AND' NotExpr)*

NotExpr ::= 'NOT'* ComparisonExpr

ComparisonExpr
  ::= BitOrExpr ComparisonTail*

ComparisonTail
  ::= ComparisonOperator BitOrExpr
  | 'IS' 'NOT'? 'NULL'
  | 'NOT' 'NULL'
  | 'NOT'? 'BETWEEN' BitOrExpr 'AND' BitOrExpr
  | 'NOT'? 'IN' InRhs
  | 'NOT'? 'LIKE' BitOrExpr ('ESCAPE' BitOrExpr)?

ComparisonOperator ::= '=' | '==' | '<>' | '!=' | '<' | '<=' | '>' | '>='

InRhs
  ::= '(' (SelectStmt | Expr (',' Expr)*)? ')'
  | SchemaQualifier? TableName
  | SchemaQualifier? TableFunctionName '(' FunctionArguments? ')'

BitOrExpr ::= AddExpr
AddExpr ::= MultiplyExpr (('+' | '-') MultiplyExpr)*
MultiplyExpr ::= UnaryExpr (('*' | '/' | '%') UnaryExpr)*

UnaryExpr ::= ('+' | '-')* PrimaryExpr

PrimaryExpr
  ::= LiteralValue
  | BindParameter
  | FunctionInvocation
  | QualifiedColumnRef
  | CastExpr
  | CaseExpr
  | ExistsExpr
  | RaiseFunction
  | '(' Expr ')'
  | '(' SelectStmt ')'

QualifiedColumnRef
  ::= SchemaName '.' TableName '.' ColumnName
  | TableName '.' ColumnName
  | ColumnName

FunctionInvocation
  ::= FunctionName
      '(' FunctionArguments? ')'
      OverClause?

FunctionArguments
  ::= '*'
  | ('DISTINCT' | 'ALL')? Expr (',' Expr)*

RaiseFunction
  ::= 'RAISE' '('
      ( 'IGNORE'
      | ('ROLLBACK' | 'ABORT' | 'FAIL') ',' Expr
      )
      ')'

LiteralValue
  ::= NumericLiteral
  | StringLiteral
  | BlobLiteral
  | 'NULL'
  | 'TRUE'
  | 'FALSE'
  | 'CURRENT_TIME'
  | 'CURRENT_DATE'
  | 'CURRENT_TIMESTAMP'

SignedNumber ::= ('+' | '-')? NumericLiteral

SchemaQualifier ::= SchemaName '.'
QualifiedTableRef ::= SchemaQualifier? TableName

IfExists    ::= 'IF' 'EXISTS'
IfNotExists ::= 'IF' 'NOT' 'EXISTS'

Name             ::= Identifier
SchemaName       ::= Name
TableName        ::= Name
TableOrIndexName ::= Name
IndexName        ::= Name
ViewName         ::= Name
TriggerName      ::= Name
ColumnName       ::= Name
ColumnAlias      ::= Name | StringLiteral
TableAlias       ::= Name
ConstraintName   ::= Name
CollationName    ::= Name
ForeignTable     ::= Name
SavepointName    ::= Name
PragmaName       ::= Name
ModuleName       ::= Name
TableFunctionName ::= Name
FunctionName     ::= Name
WindowName       ::= Name
BaseWindowName   ::= Name
Filename         ::= StringLiteral | Name

<?TOKENS?>

// SQL keywords are uppercase-only in this compatibility grammar.
EOF ::= $

Ignore ::= (WhiteSpace | LineComment | BlockComment)+
           /* ws: definition */

WhiteSpace ::= [#x9#xA#xD#x20]+

NewLine ::= #xA
          | #xD
          | #xD #xA

LineComment ::= '--' LineCommentChar* (NewLine | EOF)

LineCommentChar ::= #x9
                  | [#x20-#xD7FF]
                  | [#xE000-#xFFFD]
                  | [#x10000-#x10FFFF]

BlockComment ::= '/*' BlockCommentBody* '*/'

BlockCommentBody ::= (. - '*')
                   | ('*' (. - '/'))

Identifier ::= UnquotedIdentifier
             | QuotedIdentifier
             | BracketIdentifier
             | BacktickIdentifier

UnquotedIdentifier ::= IdentifierName

IdentifierName ::= IdentifierStart IdentifierPart*

IdentifierStart ::= [A-Z]
                  | [a-z]
                  | '_'
                  | [#x80-#xD7FF]
                  | [#xE000-#xFFFD]
                  | [#x10000-#x10FFFF]

IdentifierPart ::= IdentifierStart
                 | [0-9]
                 | '$'

QuotedIdentifier ::= '"' QuotedIdentifierChar* '"'

QuotedIdentifierChar ::= '""'
                       | (. - '"')

BracketIdentifier ::= '[' BracketIdentifierChar* ']'

BracketIdentifierChar ::= . - ']'

BacktickIdentifier ::= '`' BacktickIdentifierChar* '`'

BacktickIdentifierChar ::= '``'
                         | (. - '`')

StringLiteral ::= "'" StringChar* "'"

StringChar ::= "''"
             | (. - "'")

BlobLiteral ::= ('X' | 'x') "'" HexDigit* "'"

NumericLiteral ::= HexInteger
                 | DecimalNumber

HexInteger ::= '0' ('X' | 'x') HexDigit+

DecimalNumber ::= Digit+ ('.' Digit*)? ExponentPart?
                | '.' Digit+ ExponentPart?

ExponentPart ::= ('E' | 'e') ('+' | '-')? Digit+

BindParameter ::= '?'
                | '?' Digit+
                | (':' | '@' | '$') ParameterName
                | '$' ParameterName '::' ParameterName
                  ('(' ParameterSuffixChar* ')')?

ParameterName ::= IdentifierStart IdentifierPart*

ParameterSuffixChar ::= . - ')'

Digit ::= [0-9]

HexDigit ::= [0-9A-Fa-f]
