interpreter/parser.js
class Lexer {
  constructor(input) {
    this.input = input;
    this.position = 0;
    this.tokens = [];
    this.charClassDepth = 0;
    this.templateDepth = 0;
    this.tokenPatterns = [    { type: 'TOKEN__3B_', regex: /^;/ },    { type: 'TOKEN_BEGIN', regex: /^BEGIN/ },    { type: 'TOKEN_DEFERRED', regex: /^DEFERRED/ },    { type: 'TOKEN_IMMEDIATE', regex: /^IMMEDIATE/ },    { type: 'TOKEN_EXCLUSIVE', regex: /^EXCLUSIVE/ },    { type: 'TOKEN_TRANSACTION', regex: /^TRANSACTION/ },    { type: 'TOKEN_COMMIT', regex: /^COMMIT/ },    { type: 'TOKEN_END', regex: /^END/ },    { type: 'TOKEN_ROLLBACK', regex: /^ROLLBACK/ },    { type: 'TOKEN_TO', regex: /^TO/ },    { type: 'TOKEN_SAVEPOINT', regex: /^SAVEPOINT/ },    { type: 'TOKEN_RELEASE', regex: /^RELEASE/ },    { type: 'TOKEN_VACUUM', regex: /^VACUUM/ },    { type: 'TOKEN_INTO', regex: /^INTO/ },    { type: 'TOKEN_PRAGMA', regex: /^PRAGMA/ },    { type: 'TOKEN__3D_', regex: /^=/ },    { type: 'TOKEN__28_', regex: /^\(/ },    { type: 'TOKEN__29_', regex: /^\)/ },    { type: 'TOKEN_ON', regex: /^ON/ },    { type: 'TOKEN_OFF', regex: /^OFF/ },    { type: 'TOKEN_TRUE', regex: /^TRUE/ },    { type: 'TOKEN_FALSE', regex: /^FALSE/ },    { type: 'TOKEN_YES', regex: /^YES/ },    { type: 'TOKEN_NO', regex: /^NO/ },    { type: 'TOKEN_CREATE', regex: /^CREATE/ },    { type: 'TOKEN_UNIQUE', regex: /^UNIQUE/ },    { type: 'TOKEN_INDEX', regex: /^INDEX/ },    { type: 'TOKEN__2C_', regex: /^,/ },    { type: 'TOKEN_WHERE', regex: /^WHERE/ },    { type: 'TOKEN_TEMP', regex: /^TEMP/ },    { type: 'TOKEN_TEMPORARY', regex: /^TEMPORARY/ },    { type: 'TOKEN_TABLE', regex: /^TABLE/ },    { type: 'TOKEN_AS', regex: /^AS/ },    { type: 'TOKEN_CONSTRAINT', regex: /^CONSTRAINT/ },    { type: 'TOKEN_PRIMARY', regex: /^PRIMARY/ },    { type: 'TOKEN_KEY', regex: /^KEY/ },    { type: 'TOKEN_ASC', regex: /^ASC/ },    { type: 'TOKEN_DESC', regex: /^DESC/ },    { type: 'TOKEN_AUTOINCREMENT', regex: /^AUTOINCREMENT/ },    { type: 'TOKEN_NOT', regex: /^NOT/ },    { type: 'TOKEN_NULL', regex: /^NULL/ },    { type: 'TOKEN_CHECK', regex: /^CHECK/ },    { type: 'TOKEN_DEFAULT', regex: /^DEFAULT/ },    { type: 'TOKEN_COLLATE', regex: /^COLLATE/ },    { type: 'TOKEN_WITHOUT', regex: /^WITHOUT/ },    { type: 'TOKEN_ROWID', regex: /^ROWID/ },    { type: 'TOKEN_STRICT', regex: /^STRICT/ },    { type: 'TOKEN_VIEW', regex: /^VIEW/ },    { type: 'TOKEN_TRIGGER', regex: /^TRIGGER/ },    { type: 'TOKEN_BEFORE', regex: /^BEFORE/ },    { type: 'TOKEN_AFTER', regex: /^AFTER/ },    { type: 'TOKEN_INSTEAD', regex: /^INSTEAD/ },    { type: 'TOKEN_OF', regex: /^OF/ },    { type: 'TOKEN_DELETE', regex: /^DELETE/ },    { type: 'TOKEN_INSERT', regex: /^INSERT/ },    { type: 'TOKEN_UPDATE', regex: /^UPDATE/ },    { type: 'TOKEN_FOR', regex: /^FOR/ },    { type: 'TOKEN_EACH', regex: /^EACH/ },    { type: 'TOKEN_ROW', regex: /^ROW/ },    { type: 'TOKEN_WHEN', regex: /^WHEN/ },    { type: 'TOKEN_REPLACE', regex: /^REPLACE/ },    { type: 'TOKEN_OR', regex: /^OR/ },    { type: 'TOKEN_VALUES', regex: /^VALUES/ },    { type: 'TOKEN_CONFLICT', regex: /^CONFLICT/ },    { type: 'TOKEN_DO', regex: /^DO/ },    { type: 'TOKEN_NOTHING', regex: /^NOTHING/ },    { type: 'TOKEN_SET', regex: /^SET/ },    { type: 'TOKEN_FROM', regex: /^FROM/ },    { type: 'TOKEN_ORDER', regex: /^ORDER/ },    { type: 'TOKEN_BY', regex: /^BY/ },    { type: 'TOKEN_LIMIT', regex: /^LIMIT/ },    { type: 'TOKEN_OFFSET', regex: /^OFFSET/ },    { type: 'TOKEN_INDEXED', regex: /^INDEXED/ },    { type: 'TOKEN_RETURNING', regex: /^RETURNING/ },    { type: 'TOKEN_WITH', regex: /^WITH/ },    { type: 'TOKEN_RECURSIVE', regex: /^RECURSIVE/ },    { type: 'TOKEN_SELECT', regex: /^SELECT/ },    { type: 'TOKEN_DISTINCT', regex: /^DISTINCT/ },    { type: 'TOKEN_ALL', regex: /^ALL/ },    { type: 'TOKEN_GROUP', regex: /^GROUP/ },    { type: 'TOKEN_HAVING', regex: /^HAVING/ },    { type: 'TOKEN_UNION', regex: /^UNION/ },    { type: 'TOKEN_INTERSECT', regex: /^INTERSECT/ },    { type: 'TOKEN_EXCEPT', regex: /^EXCEPT/ },    { type: 'TOKEN__2A_', regex: /^\*/ },    { type: 'TOKEN__2E_', regex: /^\./ },    { type: 'TOKEN_LEFT', regex: /^LEFT/ },    { type: 'TOKEN_JOIN', regex: /^JOIN/ },    { type: 'TOKEN_INNER', regex: /^INNER/ },    { type: 'TOKEN_CROSS', regex: /^CROSS/ },    { type: 'TOKEN_USING', regex: /^USING/ },    { type: 'TOKEN_NULLS', regex: /^NULLS/ },    { type: 'TOKEN_FIRST', regex: /^FIRST/ },    { type: 'TOKEN_LAST', regex: /^LAST/ },    { type: 'TOKEN_OVER', regex: /^OVER/ },    { type: 'TOKEN_AND', regex: /^AND/ },    { type: 'TOKEN_BETWEEN', regex: /^BETWEEN/ },    { type: 'TOKEN_IN', regex: /^IN/ },    { type: 'TOKEN_LIKE', regex: /^LIKE/ },    { type: 'TOKEN_ESCAPE', regex: /^ESCAPE/ },    { type: 'TOKEN__3D__3D_', regex: /^==/ },    { type: 'TOKEN__3C__3E_', regex: /^<>/ },    { type: 'TOKEN__21__3D_', regex: /^!=/ },    { type: 'TOKEN__3C_', regex: /^</ },    { type: 'TOKEN__3C__3D_', regex: /^<=/ },    { type: 'TOKEN__3E_', regex: /^>/ },    { type: 'TOKEN__3E__3D_', regex: /^>=/ },    { type: 'TOKEN__2B_', regex: /^\+/ },    { type: 'TOKEN__2D_', regex: /^-/ },    { type: 'TOKEN__2F_', regex: /^\// },    { type: 'TOKEN__25_', regex: /^%/ },    { type: 'TOKEN_RAISE', regex: /^RAISE/ },    { type: 'TOKEN_IGNORE', regex: /^IGNORE/ },    { type: 'TOKEN_ABORT', regex: /^ABORT/ },    { type: 'TOKEN_FAIL', regex: /^FAIL/ },    { type: 'TOKEN_CURRENT_5F_TIME', regex: /^CURRENT_TIME/ },    { type: 'TOKEN_CURRENT_5F_DATE', regex: /^CURRENT_DATE/ },    { type: 'TOKEN_CURRENT_5F_TIMESTAMP', regex: /^CURRENT_TIMESTAMP/ },    { type: 'TOKEN_IF', regex: /^IF/ },    { type: 'TOKEN_EXISTS', regex: /^EXISTS/ },    { type: 'skip', regex: /^(?:(?:(?:[\u0009\u000a\u000d ])+|--(?:(?:\u0009|[\u0020-\ud7ff]|[\ue000-\ufffd]))*(?:(?:\u000a|\u000d|\u000d\u000a))|\/\*(?:(?:(?:[^*])|(?:\*(?:[^/]))))*\*\/))+/, skip: true },    { type: 'Identifier', regex: /^(?:(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])(?:(?:(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])|[0-9]|\$))*|"(?:(?:""|(?:[^"])))*"|\[(?:[^\]])*\]|`(?:(?:``|(?:[^`])))*`)/ },    { type: 'StringLiteral', regex: /^'(?:(?:''|(?:[^'])))*'/ },    { type: 'BlobLiteral', regex: /^(?:X|x)'(?:[0-9A-Fa-f])*'/ },    { type: 'NumericLiteral', regex: /^(?:0(?:X|x)(?:[0-9A-Fa-f])+|(?:(?:[0-9])+(?:(?:\.(?:[0-9])*))?(?:(?:E|e)(?:(?:\+|-))?(?:[0-9])+)?|\.(?:[0-9])+(?:(?:E|e)(?:(?:\+|-))?(?:[0-9])+)?))/ },    { type: 'BindParameter', regex: /^(?:\?|\?(?:[0-9])+|(?::|@|\$)(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])(?:(?:(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])|[0-9]|\$))*|\$(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])(?:(?:(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])|[0-9]|\$))*::(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])(?:(?:(?:[A-Z]|[a-z]|_|[\u0080-\ud7ff]|[\ue000-\ufffd])|[0-9]|\$))*(?:(?:\((?:[^)])*\)))?)/ },    ];
  }

  isTemplateSpanPattern(pos, kind) {
    // Deterministic scan to avoid regex escaping issues in generated code.
    if (this.input[pos] !== '}') return false;
    const BACKTICK = String.fromCharCode(96);
    const max = Math.min(this.input.length, pos + 256);
    let i = pos + 1;
    while (i < max) {
      const ch = this.input[i];
      const next = this.input[i + 1];

      if (ch === '\\') {
        i += 2;
        continue;
      }

      if (ch === '$' && next === '{') {
        return kind === 'TemplateMiddle';
      }

      if (ch === BACKTICK) {
        return kind === 'TemplateTail';
      }

      i++;
    }
    return false;
  }

  enterTemplateSpan() {
    this.templateDepth++;
  }

  exitTemplateSpan() {
    if (this.templateDepth > 0) {
      this.templateDepth--;
    }
  }
  
  tokenize() {
    while (this.position < this.input.length) {
      let bestPattern = null;
      let bestMatch = null;
      const candidates = [];

      const isGenericNameType = (type) => (
        type === 'Name' || type === 'NameChar' || type === 'NameStartChar'
      );

      for (const pattern of this.tokenPatterns) {
        // Template middle/tail tokens are context-sensitive and must only
        // be considered while lexing inside an active template expression.
        if ((pattern.type === 'TemplateMiddle' || pattern.type === 'TemplateTail') && this.templateDepth === 0) {
          continue;
        }

        const regex = pattern.regex;
        const match = this.input.substring(this.position).match(regex);

        if (match && match.index === 0 && match[0].length > 0) {
          let effectivePattern = pattern;
          // When parsing template expressions, disambiguate closing brace as template span boundary.
          if (this.templateDepth > 0 && pattern.type === 'TOKEN__7D_') {
            if (this.isTemplateSpanPattern(this.position, 'TemplateMiddle')) {
              effectivePattern = { ...pattern, type: 'TemplateMiddle' };
            } else if (this.isTemplateSpanPattern(this.position, 'TemplateTail')) {
              effectivePattern = { ...pattern, type: 'TemplateTail' };
            }
          }

          candidates.push({ pattern: effectivePattern, match });
          if (!bestMatch
              || match[0].length > bestMatch[0].length
              || (match[0].length === bestMatch[0].length && effectivePattern.skip && !bestPattern.skip)
              || (match[0].length === bestMatch[0].length
                  && bestPattern
                  && isGenericNameType(bestPattern.type)
                  && !isGenericNameType(effectivePattern.type))) {
            bestPattern = effectivePattern;
            bestMatch = match;
          }
        }
      }

      // Inside character classes, prefer Char/CharCode/CharRange-like tokens
      // over generic global terminals such as '?>' that can overmatch.
      if (this.charClassDepth > 0 && candidates.length > 0) {
        const preferredTypes = new Set(['CharCodeRange', 'CharRange', 'CharCode', 'Char', 'TOKEN__5D_']);
        const preferred = candidates.filter(c => preferredTypes.has(c.pattern.type));
        if (preferred.length > 0) {
          let localBest = preferred[0];
          for (const c of preferred) {
            if (c.match[0].length > localBest.match[0].length) {
              localBest = c;
            }
          }
          bestPattern = localBest.pattern;
          bestMatch = localBest.match;
        }
      }

      // If current input starts with whitespace and a skip token is available,
      // prefer skipping whitespace first instead of consuming it as grammar data.
      if (candidates.length > 0 && /^\s/.test(this.input.substring(this.position, this.position + 1))) {
        const skipCandidates = candidates.filter(c => c.pattern.skip);
        if (skipCandidates.length > 0) {
          let localBest = skipCandidates[0];
          for (const c of skipCandidates) {
            if (c.match[0].length > localBest.match[0].length) {
              localBest = c;
            }
          }
          bestPattern = localBest.pattern;
          bestMatch = localBest.match;
        }
      }

      if (!bestMatch) {
        throw new Error(`Unexpected character at position ${this.position}: '${this.input[this.position]}'`);
      }

      if (!bestPattern.skip) {
        const matchedToken = {
          type: bestPattern.type,
          value: bestMatch[0],
          start: this.position,
          end: this.position + bestMatch[0].length
        };
        this.tokens.push(matchedToken);

        if (bestPattern.type === 'TOKEN__5B_' || bestPattern.type === 'TOKEN__5B__5E_') {
          this.charClassDepth++;
        } else if (bestPattern.type === 'TOKEN__5D_' && this.charClassDepth > 0) {
          this.charClassDepth--;
        } else if (bestPattern.type === 'TemplateHead') {
          this.enterTemplateSpan();
        } else if (bestPattern.type === 'TemplateTail') {
          this.exitTemplateSpan();
        }
      }

      this.position += bestMatch[0].length;
    }
    
    // Add EOF token
    this.tokens.push({
      type: 'EOF',
      value: '',
      start: this.position,
      end: this.position
    });
    
    return this.tokens;
  }
}

class Parser {
  constructor(input, eventHandler = null) {
    this.lexer = new Lexer(input);
    this.tokens = this.lexer.tokenize();
    this.position = 0;
    this.errors = [];
    this.eventHandler = eventHandler;
  }
  
  peek() {
    return this.tokens[this.position];
  }
  
  consume(expectedType) {
    const token = this.peek();
    if (!token || token.type !== expectedType) {
      this.errors.push({
        expected: expectedType,
        found: token ? token.type : 'EOF',
        position: this.position
      });
      throw new Error(`Expected '${expectedType}', got '${token ? token.type : 'EOF'}'`);
    }
    if (this.eventHandler && typeof this.eventHandler.terminal === 'function') {
      this.eventHandler.terminal(expectedType, token.value, this.position);
    }
    this.position++;
    return token;
  }
  
  match(expectedType) {
    const token = this.peek();
    if (token && token.type === expectedType) {
      this.position++;
      return true;
    }
    return false;
  }

  markEventState() {
    if (this.eventHandler && typeof this.eventHandler.checkpoint === 'function') {
      return this.eventHandler.checkpoint();
    }
    return null;
  }

  restoreEventState(mark) {
    if (mark !== null && this.eventHandler && typeof this.eventHandler.restore === 'function') {
      this.eventHandler.restore(mark);
    }
  }
  
  getErrorMessage() {
    if (this.errors.length === 0) return 'No errors';
    const err = this.errors[0];
    return `Syntax error: expected ${err.expected}, got ${err.found}`;
  }
  parse() {
    const result = this.parseSqlScript();
    const next = this.peek();
    if (!next && this.position === this.tokens.length) {
      return result;
    }
    if (!next || next.type !== 'EOF') {
      throw new Error(`Unexpected token at end: ${next ? next.type : 'EOF(consumed)'}`);
    }
    return result;
  }
  parseSqlScript() {
    if (this.eventHandler && typeof this.eventHandler.startNonterminal === 'function') {
      this.eventHandler.startNonterminal('SqlScript', this.position);
    }
    let __ok = false;
    try {
    while (this.match('TOKEN__3B_')) { /* zero or more matched */ }
    // Group ?
    {
      const _optStart = this.position;
      const _optMark = this.markEventState();
      try {
    this.parseSqlStatement();
    // Group *
    while (true) {
      const _loopStart = this.position;
      const _loopMark = this.markEventState();
      try {
    this.consume('TOKEN__3B_');
    while (this.match('TOKEN__3B_')) { /* zero or more matched */ }
    this.parseSqlStatement();
      } catch (e) {
        this.position = _loopStart;
        this.restoreEventState(_loopMark);
        break;
      }
      if (this.position === _loopStart) break;
    }
    while (this.match('TOKEN__3B_')) { /* zero or more matched */ }
      } catch (e) {
        this.position = _optStart;
        this.restoreEventState(_optMark);
      }
    }
    this.consume('EOF');
